# runa

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-04-20-copilot-ci-implementation-plan.md  2026-04-20-init-runa-implementation-plan.md  2026-05-03-core-mvp-plan.md  2026-05-03-iced-ui-implementation-plan.md
docs/superpowers/specs/: 2026-04-20-copilot-ci-design.md  2026-04-20-iced-ui-design.md  2026-04-20-init-rust-project-design.md  2026-05-03-core-mvp-design.md
src/: lib.rs  main.rs  state.rs
src/app/: mod.rs
src/core/: executor.rs  mod.rs  workspace.rs
src/filetree/: mod.rs
src/plan/: mod.rs  parser.rs
src/terminal/: mod.rs
src/ui/: link_list.rs  mod.rs  plan_panel.rs  sidebar.rs
src/util/: mod.rs
tests/: app_launch.rs  cli_integration.rs  cli_no_steps.rs  executor_integration.rs  executor_nonzero_exit.rs  filetree_ops.rs  link_detection.rs  plan_parser.rs  plan_parser_extra.rs  runstep_integration.rs  step_lifecycle.rs  terminal_integration.rs  terminal_large_output.rs  terminal_mock.rs
tests/fixtures/: empty_plan.md  simple_plan.md
