[package]
name = "runa"
version = "0.1.0"
edition = "2021"
description = "Keyboard-first plan execution TUI (scaffold)"
license = "MIT"

[dependencies]
# Add runtime dependencies as needed
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = "0.9"
async-trait = "0.1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
